--- a/teacher/index.html
+++ b/teacher/index.html
@@ -82,21 +82,21 @@
 		
 		<link href="../_app/immutable/assets/Toaster.DIZjURCf.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/0.XXgkcgSK.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.B806Pxn4.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/B7sQ468G.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.WXngFu8q.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/DAWBWInR.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cz84p5nM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/2DEE289M.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.Bnp5-Tv8.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.B9UWoPSX.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/CafvPmdz.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.i-VQHa-W.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.DefPHV5S.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Dq2DS5JJ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Bu-Sn1jY.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/sNkauCIF.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/BfP530Hy.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cq2yM7d-.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/DaiCw33Z.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Cw03i-ol.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/4.C_IGiBJg.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/DIVvMM-r.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/4.CjV-A7rZ.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/B3tar55M.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/BANrAeDQ.js">
 	</head>
 
@@ -105,15 +105,15 @@
 			
 			<script>
 				{
-					__sveltekit_1slq9ar = {
+					__sveltekit_1k2wpj2 = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../_app/immutable/entry/start.B806Pxn4.js"),
-						import("../_app/immutable/entry/app.Bnp5-Tv8.js")
+						import("../_app/immutable/entry/start.WXngFu8q.js"),
+						import("../_app/immutable/entry/app.B9UWoPSX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
